@@ -6,4 +6,4 @@ from time import sleep
 antennaDoor = AntennaDoor()
 while True:
     print(antennaDoor.readDoorStatus())
-    sleep(0.3)
+    sleep(1)
